--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ html{
 
 body{
     display: flex;
+    flex-flow: column;
     width: 100vw;
     height: 100vh;
     margin: 0;
@@ -32,6 +33,7 @@ body{
     flex-flow: column;
     align-self: center;
     margin: auto;
+    margin-top: 30px;
     border-style: solid;
     border-color: #00766c;
     border-radius: 10px;
@@ -39,6 +41,10 @@ body{
     padding-top: 30px;
     background-color: #b2dfdb;
     box-shadow: 5px 10px #26a69a;
+}
+
+.indexContainer{
+    margin:auto;
 }
 
 .button{
@@ -89,5 +95,18 @@ body{
     border-bottom: 1px solid #00766c;
     background-color: #e5ffff;
     opacity: 0.7;
+}
+
+form input[type="submit"]{
+    display: block;
+    margin: 0 auto;
+}
+
+img{
+    width: 150px;
+    height: 150px;
+    display: flex;
+    margin: auto;
+    margin-bottom: 0px;
 }
 
