--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,7 @@ body{
     padding-top: 30px;
     background-color: #b2dfdb;
     box-shadow: 5px 10px #26a69a;
+    transition: 0.5s;
 }
 
 .indexContainer{
@@ -97,7 +98,7 @@ body{
     opacity: 0.7;
 }
 
-form input[type="submit"]{
+form input[type="button"]{
     display: block;
     margin: 0 auto;
 }
